--- a/WeatherBarGraph.html
+++ b/WeatherBarGraph.html
@@ -61,12 +61,27 @@
 
         /* Styles for the chart container */
         #chart-container {
+            color: antiquewhite;
             margin-top: 20px;
             height: 350px;
             border: 1px solid #ccc;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             overflow: hidden;
+        }
+
+        .highcharts-text {
+            background-color: #111;
+            font-size: 24px;
+            font-weight: 900;
+            color: antiquewhite;
+            text-transform: uppercase;
+        }
+
+        .highcharts-number {
+            background-color: #ccc;
+            font-size: 28px;
+            color: rgb(67, 143, 48);
         }
 
         /* Styles for the input container */
